# sliding-window-aggregators

./: .gitignore  .travis.yml  README.md  bulk_fiba_artifact_guide.md
cpp/: .gitignore  Makefile  README.md  build-and-test.sh  build.sh  can-skip.sh
cpp/builder/: Dockerfile
cpp/src/: AMTA.hpp  AggregationFunctions.hpp  BulkAdapter.hpp  ChunkedArrayQueue.hpp  DABA.hpp  DABALite.hpp  DataGenerators.h  DynamicFlatFIT.hpp  FiBA.hpp  FlatFIT.hpp  ImplicitQueueABA.hpp  ImplicitTwoStacksLite.hpp  OkasakisQueue.hpp  ReCalc.hpp  Reactive.hpp  RingBufferDABALite.hpp  RingBufferQueue.hpp  SubtractOnEvict.hpp  TimestampedDABA.hpp  TimestampedDABALite.hpp  TimestampedDynamicFlatFIT.hpp  TimestampedFifo.hpp  TimestampedImplicitTwoStacksLite.hpp  TimestampedTwoStacks.hpp  TimestampedTwoStacksLite.hpp  TwoStacks.hpp  TwoStacksLite.hpp  amta_test.cc  benchmark_core.h  benchmark_driver.cc  bulk_benchmark_driver.cc  bulk_data_benchmark.cc  bulk_evict_benchmark_driver.cc  bulk_evict_insert_benchmark_driver.cc  bulk_evict_test.cc  bulk_test.cc  data_benchmark.cc  dynamic_benchmark_driver.cc  ooo_adversary_benchmark_driver.cc  ooo_benchmark_driver.cc  (+5 more)
experiments/: .gitignore  analyze_ood.py  artifact_guide.md  bulk_data_common.py  data_tools.py  extract_bulk_count.py  process_bulk_data.py  process_bulk_data_evict_size.py  process_bulk_data_latency.py  process_bulk_data_ood.py  process_bulk_data_window_size.py  process_bulk_evict.py  process_bulk_evict_insert.py  process_bulk_evict_insert_latency.py  process_bulk_evict_latency.py  process_data.py  process_data_latency.py  process_dynamic.py  process_fifo.py  process_latency.py  process_ooo.py  process_utility.py  run_all_bulk.sh  run_bulk_data.py  run_bulk_data_latency.py  run_bulk_evict.py  run_bulk_evict_insert.py  run_bulk_evict_insert_latency.py  run_bulk_evict_latency.py  run_data.py  run_data_latency.py  run_dynamic.py  run_fifo.py  run_latency.py  run_ooo.py  run_ooo_adversary_latency.py  run_utility.py
rust/: Cargo.toml
rust/benches/: bench_main.rs  bench_static.rs
rust/benches/benchmarks/: fifo_window.rs  mod.rs
rust/src/: lib.rs
rust/src/daba/: chunked_array_queue.rs  mod.rs
rust/src/flatfit/: mod.rs
rust/src/ops/: mod.rs
rust/src/ops/max/: mod.rs
rust/src/ops/mean/: mod.rs
rust/src/ops/sum/: mod.rs
rust/src/reactive/: flat_fat.rs  mod.rs
rust/src/recalc/: mod.rs
rust/src/soe/: mod.rs
rust/src/two_stacks/: mod.rs
rust/src/two_stacks_lite/: mod.rs
rust/tests/: common.rs  fifo-window.rs  fifo_window.rs  trybuild.rs  trybuild_soe_max.fail  trybuild_soe_max.stderr  trybuild_soe_sum.pass
